test/compile-fail/resolution/pub/in-non-visible-ancestor-mod/expected.txt
error: this item is not visible in mod `a`
 --> top.rhdl:4:26
  |
4 |             pub(in crate::a) struct d {}
  |                           ^ not visible in this scope
